force-app/main/default/objects/Activity/fields/I_RS_Amount_Dispersed__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Amount_Dispersed__c</fullName>
    <label>Amount Dispersed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>