force-app/main/default/objects/Activity/fields/I_RS_Amount_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Amount_Invoiced__c</fullName>
    <label>Amount Invoiced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>