force-app/main/default/objects/Activity/fields/I_RS_Area_Responsible__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Area_Responsible__c</fullName>
    <label>Area Responsible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Researcher</fullName>
            </value>
            <value>
                <fullName>Research Office</fullName>
            </value>
            <value>
                <fullName>Time-based</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>