force-app/main/default/objects/Activity/fields/I_RS_Assignee_Profile__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Assignee_Profile__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Profile</label>
    <type>Text</type>
</CustomField>