force-app/main/default/objects/Activity/fields/I_RS_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Base_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base URL</label>
    <type>Text</type>
</CustomField>