force-app/main/default/objects/Activity/fields/I_RS_Contracts_Team_Complete__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contracts_Team_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracts Team Complete?</label>
    <type>Checkbox</type>
</CustomField>