force-app/main/default/objects/Activity/fields/I_RS_Current_User_is_Assignee__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Current_User_is_Assignee__c</fullName>
    <formula>IF( 
Owner:User.Id  = $User.Id , 

True, 
False 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is Assignee</label>
    <type>Checkbox</type>
</CustomField>