force-app/main/default/objects/Activity/fields/I_RS_Date_Invoice_Raised__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Invoice_Raised__c</fullName>
    <label>Date Invoice Raised</label>
    <type>Date</type>
</CustomField>