force-app/main/default/objects/Activity/fields/I_RS_Ethics_Team_Complete__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Team_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ethics Team Complete?</label>
    <type>Checkbox</type>
</CustomField>