force-app/main/default/objects/Activity/fields/I_RS_Expected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Expected_Completion_Date__c</fullName>
    <inlineHelpText>When the researcher will achieve their part of the milestone if it can&apos;t be met by the due date</inlineHelpText>
    <label>Expected Completion Date</label>
    <type>Date</type>
</CustomField>