force-app/main/default/objects/Activity/fields/I_RS_Finance_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Finance_User__c</fullName>
    <label>Finance User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>