force-app/main/default/objects/Activity/fields/I_RS_Invoice_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Invoice_Reference_Number__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>