force-app/main/default/objects/Activity/fields/I_RS_Invoice_when_milestone_met__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Invoice_when_milestone_met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice due when milestone met</label>
    <type>Checkbox</type>
</CustomField>