force-app/main/default/objects/Activity/fields/I_RS_Is_financial_milestone__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Is_financial_milestone__c</fullName>
    <formula>IF (
      ( RecordType.DeveloperName =&apos;I_RS_RES_Finance&apos;
          ||
        RecordType.DeveloperName =&apos;I_RS_RES_RO_Finance&apos;
          ||
        RecordType.DeveloperName =&apos;I_RS_Time_Finance&apos;
       ),
      TRUE, FALSE
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is financial milestone</label>
    <type>Checkbox</type>
</CustomField>