force-app/main/default/objects/Activity/fields/I_RS_Milestone_Amount__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Milestone_Amount__c</fullName>
    <label>Milestone Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>