force-app/main/default/objects/Activity/fields/I_RS_Milestone_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Milestone_Record_Type__c</fullName>
    <formula>(RecordType.DeveloperName = &apos;I_RS_RES_Finance&apos; 
|| 
RecordType.DeveloperName = &apos;I_RS_RES_RO&apos; 
|| 
RecordType.DeveloperName = &apos;I_RS_RES_RO_Finance&apos; 
|| 
RecordType.DeveloperName = &apos;I_RS_Time_Finance&apos;  
||
RecordType.DeveloperName =&apos;Ethics&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Record Type?</label>
    <type>Checkbox</type>
</CustomField>