force-app/main/default/objects/Activity/fields/I_RS_Milestone_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Milestone_Status__c</fullName>
    <description>Same as the &quot;Status&quot; field in Milestone</description>
    <label>Milestone Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>On target</fullName>
            </value>
            <value>
                <fullName>Completed / agreed by Researcher</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
            <value>
                <fullName>Possibly won’t meet the milestone</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>