force-app/main/default/objects/Activity/fields/I_RS_Milestone_Task_Overdue_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Milestone_Task_Overdue_Status__c</fullName>
    <description>If Task is a Milestone Task and is overdue but not Completed, show red. Otherwise, show green</description>
    <formula>IF(!ISBLANK(I_RS_Traffic_Light_Status__c), 

IMAGE( 
LEFT($Api.Partner_Server_URL_260, 
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260) 
)+ 
&quot;resource/MilestoneTrafficLight_&quot;+I_RS_Traffic_Light_Status__c, I_RS_Traffic_Light_Status__c, 15,15 
) 

, 

&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Task Overdue Status</label>
    <type>Text</type>
</CustomField>