force-app/main/default/objects/Activity/fields/I_RS_Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Milestone_Type__c</fullName>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_RS_Milestone_Type</valueSetName>
    </valueSet>
</CustomField>