force-app/main/default/objects/Activity/fields/I_RS_Milestone_Type_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Milestone_Type_Other_Description__c</fullName>
    <label>Milestone Type Is &apos;Other&apos; - Specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>