force-app/main/default/objects/Activity/fields/I_RS_Number_of_days_remaining__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Number_of_days_remaining__c</fullName>
    <formula>ActivityDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>