force-app/main/default/objects/Activity/fields/I_RS_Outlook_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Outlook_Id__c</fullName>
    <description>Id for syncing certain Activities in users Outlook</description>
    <label>Exchange ID</label>
    <type>TextArea</type>
</CustomField>