force-app/main/default/objects/Activity/fields/I_RS_Parent_Object_Label_Singular__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Parent_Object_Label_Singular__c</fullName>
    <description>The Related To object&apos;s singular label, e.g. &quot;Project Proposal&quot;</description>
    <inlineHelpText>The Related To object&apos;s singular label, e.g. &quot;Project Proposal&quot;</inlineHelpText>
    <label>Parent Object Label - Singular</label>
    <length>255</length>
    <type>Text</type>
</CustomField>