force-app/main/default/objects/Activity/fields/I_RS_Parent_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Parent_Object_Name__c</fullName>
    <description>API Name of the object of the Related To record</description>
    <inlineHelpText>API Name of the object of the Related To record</inlineHelpText>
    <label>Parent Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>