force-app/main/default/objects/Activity/fields/I_RS_Parent_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Parent_Record_Name__c</fullName>
    <description>Record name of Related To record. For this to work for an object, please fill in the object&apos;s details in the Object Metadata custom setting.</description>
    <label>Parent Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>