force-app/main/default/objects/Activity/fields/I_RS_Pre_Conditions_and_Instructions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Pre_Conditions_and_Instructions__c</fullName>
    <label>Pre-Conditions and Instructions</label>
    <type>TextArea</type>
</CustomField>