force-app/main/default/objects/Activity/fields/I_RS_Project_Proposal_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposal_Name__c</fullName>
    <description>Name of parent record in Related To field. Useful for email templates.</description>
    <label>Project Proposal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>