force-app/main/default/objects/Activity/fields/I_RS_Send_Chatter_Message__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Send_Chatter_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send chatter notification to the primary Contact Person of the Project Proposal when the &quot;Task&quot; is marked as complete.</description>
    <label>Send Chatter Message</label>
    <type>Checkbox</type>
</CustomField>