force-app/main/default/objects/Activity/fields/I_RS_Task_Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Task_Owner_First_Name__c</fullName>
    <formula>Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Owner First Name</label>
    <type>Text</type>
</CustomField>