force-app/main/default/objects/Activity/fields/I_RS_Task_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Task_Owner_Name__c</fullName>
    <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Owner Name</label>
    <type>Text</type>
</CustomField>