force-app/main/default/objects/Activity/fields/I_RS_Task_to_Outlook_Sync_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Task_to_Outlook_Sync_Error_Message__c</fullName>
    <description>Error message when Task fails to sync to Outlook, whether error occurred on Salesforce or Outlook</description>
    <label>Task to Outlook Sync Error Message</label>
    <type>TextArea</type>
</CustomField>