force-app/main/default/objects/Activity/fields/I_RS_Task_to_Outlook_Sync_Event_Subject__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Task_to_Outlook_Sync_Event_Subject__c</fullName>
    <description>Event subject when syncing Milestone Task to Outlook</description>
    <formula>TEXT(I_RS_Milestone_Type__c) + &quot; due for &quot; + I_RS_Parent_Record_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task to Outlook Event Subject</label>
    <type>Text</type>
</CustomField>