force-app/main/default/objects/Activity/fields/I_RS_Task_to_Outlook_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Task_to_Outlook_Sync_Status__c</fullName>
    <description>Tracks status of Task being synced to Outlook as an event. Populated via automated logic, and used by overnight batch to determine what records to sync and how (i.e. create new, replace existing, delete existing)</description>
    <label>Task to Outlook Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert Pending</fullName>
            </value>
            <value>
                <fullName>Insert Successful</fullName>
            </value>
            <value>
                <fullName>Insert Failed</fullName>
            </value>
            <value>
                <fullName>Update Pending</fullName>
            </value>
            <value>
                <fullName>Update Successful</fullName>
            </value>
            <value>
                <fullName>Update Failed</fullName>
            </value>
            <value>
                <fullName>Delete Pending</fullName>
            </value>
            <value>
                <fullName>Delete Successful</fullName>
            </value>
            <value>
                <fullName>Delete Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>