force-app/main/default/objects/Activity/fields/I_RS_Traffic_Light_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Traffic_Light_Status__c</fullName>
    <description>Logic that specifies what traffic light status to use - currently Green, Yellow, Red, or nothing</description>
    <formula>/*Milestone?*/
IF ( (RecordType.DeveloperName = &apos;I_RS_RES_Finance&apos;
||
RecordType.DeveloperName = &apos;I_RS_RES_RO&apos;
||
RecordType.DeveloperName = &apos;I_RS_RES_RO_Finance&apos;
||
RecordType.DeveloperName = &apos;I_RS_Time_Finance&apos;
||
RecordType.DeveloperName = &apos;Ethics&apos;),

/*Is a Milestone*/
/*---Closed?*/
IF ( IsClosed,

/*---Is Closed...*/
&apos;&apos;
/*---Is Not closed*/
,

/*-------Overdue?*/
IF( ActivityDate &lt; TODAY(),

/*-------Is overdue*/
&apos;Red&apos;
/*-------Is not overdue*/
,

/*----------Due within 7 days?*/
IF (ActivityDate - TODAY() &lt;= 7,

/*----------Yes, due within in 7 days*/
&apos;Yellow&apos;

,
/*----------No, not due within 7 days*/
&apos;Green&apos;
)

))

,
/*Not a Milestone*/
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Traffic Light Status</label>
    <type>Text</type>
</CustomField>