force-app/main/default/objects/Activity/fields/I_RS_Valid_for_Task_To_Outlook_Sync__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Valid_for_Task_To_Outlook_Sync__c</fullName>
    <description>Whether this Task should be picked up for custom code sync to Outlook. UserType = &apos;Partner&apos; refers to Researcher Portal users</description>
    <formula>OR(
AND(
(I_ST_SACE_Record_Type__c),
(TEXT(Status) &lt;&gt; &apos;Superseded or Cancelled&apos;)
),
AND(
I_RS_Parent_Object_Name__c = &quot;Project_Proposal__c&quot;,
(I_RS_Milestone_Record_Type__c),
(RecordType.DeveloperName &lt;&gt; &apos;I_RS_Time_Finance&apos;),
Owner:User.I_RS_Is_Researcher_User__c = &apos;1&apos;,
(TEXT(Status) &lt;&gt; &apos;Superseded or Cancelled&apos;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid for Task-To-Outlook Sync</label>
    <type>Checkbox</type>
</CustomField>