force-app/main/default/objects/Activity/fields/I_ST_SACE_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>I_ST_SACE_Record_Type__c</fullName>
    <formula>RecordType.DeveloperName = &apos;I_ST_SACE_Task&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SACE Record Type?</label>
    <type>Checkbox</type>
</CustomField>