force-app/main/default/objects/Activity/fields/I_ST_Task_to_Outlook_Sync_Event_Body__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Task_to_Outlook_Sync_Event_Body__c</fullName>
    <formula>&apos;&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body&gt;&apos;
+

&apos;The following task is due today!&apos; + &apos;&lt;br/&gt;&lt;br/&gt;&apos; +

&apos;Subject: &apos; + Subject + &apos;&lt;br/&gt;&lt;br/&gt;&apos; +

&apos;Priority: &apos; +  TEXT(Priority) + &apos;&lt;br/&gt;&lt;br/&gt;&apos; +

&apos;Status: &apos; +  TEXT(Status) + &apos;&lt;br/&gt;&lt;br/&gt;&apos; +

&apos;Related To &apos; + I_RS_Parent_Object_Name__c + &apos;: &apos; + I_RS_Parent_Record_Name__c + &apos;&lt;br/&gt;&lt;br/&gt;&apos; +

&apos;&lt;a href=&quot;&apos;+I_RS_Base_URL__c+Id+&apos;&quot;&gt;View record in Salesforce&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;&apos; +

&apos;This is a system-generated email, please do not reply.&apos;+

&apos;&lt;/body&gt;&lt;/html&gt;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task to Outlook Sync Event Body SACE</label>
    <type>Text</type>
</CustomField>